--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 p { color: #cdd6f4; font-family: 'Noto Sans'; font-size: 20px; }
-h1 { color: #89b4fa; font-family: "Ojuju"; }
-h3 { color: #74c7ec; font-family: 'Monospace'; }
+h1 { color: #f38ba8; font-family: "Ojuju"; }
+h3 { color: #eba0ac; font-family: 'Monospace'; }
 a { color: #89b4fa; }
 a:visited { color: #cba6f7; }
 
