--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {
     text-align: center;
 }
 
-p { color: #cdd6f4; font-family: 'Noto Sans'; font-size: 20px; }
-h1 { color: #f38ba8; font-family: "Ojuju"; }
-h3 { color: #eba0ac; font-family: 'Monospace'; }
+p { color: #a6adc8; font-family: 'Noto Sans'; font-size: 20px; }
+h1 { color: #cdd6f4; font-family: "Ojuju"; }
+h3 { color: #bac2de; font-family: 'Monospace'; }
 a { color: #89b4fa; }
 a:visited { color: #cba6f7; }
 
