--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 
 p { color: #a6adc8; font-family: 'Noto Sans'; font-size: 20px; }
 h1 { color: #cdd6f4; font-family: "Ojuju"; }
+h2 { color: #cdd6f4; font-family: 'Monospace'; }
 h3 { color: #bac2de; font-family: 'Monospace'; }
 a { color: #89b4fa; }
 a:visited { color: #cba6f7; }
