--- a/style.css
+++ b/style.css
@@ -19,3 +19,7 @@ footer {
     background-color: #313244;
     text-align: center;
 }
+
+.pcpp-part-list { margin-left: auto; margin-right: auto; }
+tr { color: #a6adc8; font-family: 'Noto Sans'; text-align: left; }
+
