--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
    background-color: #1e1e2e;
-   text-align: center; 
+   text-align: center;
+   margin-bottom: 100px;
 }
 
 p { color: #a6adc8; font-family: 'Noto Sans'; font-size: 20px; }
