--- a/style.css
+++ b/style.css
@@ -27,3 +27,8 @@ footer {
 .pcpp-part-list { margin-left: auto; margin-right: auto; }
 tr { color: #a6adc8; font-family: 'Noto Sans'; text-align: left; }
 
+@media only screen and (max-width: 1100px) {
+  .hide-on-mobile {
+    display: none;
+  }
+}
