--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -7,11 +7,28 @@ Hugo directory and insert:
 or whatever comment engine you want -> https://gohugo.io/content-management/comments/#readout
 -->
 
-<script src="https://utteranc.es/client.js"
+<script src="https://giscus.app/client.js"
+        data-repo="adamperkowski/adamperkowski.github.io"
+        data-repo-id="R_kgDOLcu7RA"
+        data-category="Blog Comments"
+        data-category-id="DIC_kwDOLcu7RM4CjTM8"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="0"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="transparent_dark"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
+
+<!--<script src="https://utteranc.es/client.js"
         repo="adamperkowski/adamperkowski.github.io"
         issue-term="pathname"
         label="comment"
         theme="photon-dark"
         crossorigin="anonymous"
         async>
-</script>
+</script> -->
