--- a/static/style.css
+++ b/static/style.css
@@ -215,6 +215,15 @@ img {
   overflow: hidden;
 }
 
+video {
+  display: block;
+  max-width: 100%;
+  border: 8px solid var(--accent);
+  border-radius: var(--radius);
+  padding: 8px;
+  overflow: hidden;
+}
+
 figure img,
 figure video {
   margin-bottom: 0;
