better legal stuff

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+/* Copyright (c) 2021 Catppuccin */
+
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Fira+Code:wght@400;700&display=swap");
 
 :root {
