footer legal stuff

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,9 +5,9 @@
         <span>{{ $.Site.Copyright | safeHTML }}</span>
     {{ else }}
       <div class="copyright">
-        <span>Copyright © {{ now.Year }} :: <a href="https://github.com/adamperkowski/adamperkowski.github.io/blob/hugo/LICENSE">MIT License</a></span>
+        <span>Copyright © {{ now.Year }} :: <a href="https://github.com/adamperkowski/adamperkowski.github.io/blob/hugo/LICENSE.CC-BY-ND-4.0">CC BY-ND 4.0</a></span>
     {{ end }}
-      <span>:: <a href="https://github.com/adamperkowski/adamperkowski.github.io/blob/hugo/NOTICE" target="_blank">Notices</a></span>
+      <span>:: <a href="https://github.com/adamperkowski/adamperkowski.github.io/blob/hugo/LICENSE.MIT" target="_blank">MIT</a></span>
       </div>
   </div>
 </footer>
